--- a/src/implementations/vanilla/components/page-banner/_page-banner.scss
+++ b/src/implementations/vanilla/components/page-banner/_page-banner.scss
@@ -51,8 +51,23 @@ $_font-weight: null !default;
 }
 
 .ecl-page-banner__content {
+  align-items: start;
   box-sizing: content-box;
-  display: block;
+  display: inline-flex;
+  flex-direction: column;
+}
+
+/*
+* centered
+*/
+.ecl-page-banner--centered {
+  .ecl-page-banner__container {
+    justify-content: center;
+  }
+
+  .ecl-page-banner__content {
+    align-items: center;
+  }
 }
 
 .ecl-page-banner__image {
@@ -110,19 +125,6 @@ $_font-weight: null !default;
   .ecl-page-banner__title {
     font: map.get($_font, 'title', 'xl');
     font-weight: map.get($_font-weight, 'title');
-  }
-}
-
-/*
-  * centered
-  */
-.ecl-page-banner--centered {
-  .ecl-page-banner__container {
-    justify-content: center;
-  }
-
-  .ecl-page-banner__content {
-    text-align: center;
   }
 }
 
@@ -365,12 +367,6 @@ $_font-weight: null !default;
       border-radius: map.get($_border-radius, 'banner');
       height: 100%;
       padding-top: 0;
-    }
-
-    .ecl-page-banner__content {
-      align-items: center;
-      display: inline-flex;
-      flex-direction: column;
     }
 
     .ecl-page-banner__title,
